--- a/pc.html
+++ b/pc.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5736423'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s6.cnzz.com/stat.php%3Fid%3D5736423' type='text/javascript'%3E%3C/script%3E"));</script>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
+<noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
 </body>
 </html>
