--- a/pc.html
+++ b/pc.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0.1;url=http://x.kuwo.cn/KuwoLive/OpenLiveRoomLink?from=2095081138">
+<meta http-equiv="refresh" content="0.1;url=http://www.ysqingren.com?id=a7669">
 <title></title>
 </head>
 <body>
