--- a/mmvip.html
+++ b/mmvip.html
@@ -25,7 +25,7 @@ margin:10px;
 <body bgcolor="#000000">
 
 <div class="top" >
-<FONT color=#ffff00><SPAN style="FONT-SIZE: 60pt; FONT-FAMILY: 华文行楷; mso-bidi-font-family: 'Times New Roman'; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA; mso-hansi-font-family: 宋体; mso-bidi-font-size: 12.0pt"><FONT color=#ffd700><IMG height=100 src="http://www.tu265.com/di-08d80e94dcae701f9d0a4e6207165473.gif" width=120></FONT><IMG src="http://www.tu265.com/di-e9cb8b6f757594d90f1d0a19077d07a6.gif" border="0"><FONT color=#ffd700><IMG height=100 src="http://www.tu265.com/di-08d80e94dcae701f9d0a4e6207165473.gif" width=120></FONT></SPAN></FONT>
+<FONT color=#ffff00><SPAN style="FONT-SIZE: 60pt; FONT-FAMILY: 华文行楷; mso-bidi-font-family: 'Times New Roman'; mso-font-kerning: 1.0pt; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA; mso-hansi-font-family: 宋体; mso-bidi-font-size: 12.0pt"><FONT color=#ffd700><IMG height=100 src="http://109.imagebam.com/download/27EAwKas4cYpzVKh4Fq7ZA/35723/357224910/00.gif" width=120></FONT><IMG src="http://112.imagebam.com/download/tnoKN8-EFrSr1xBU4oZMdQ/35723/357224906/ll.gif" border="0"><FONT color=#ffd700><IMG height=100 src="http://109.imagebam.com/download/27EAwKas4cYpzVKh4Fq7ZA/35723/357224910/00.gif" width=120></FONT></SPAN></FONT>
 <font color=#ffffff size=2 ><b>
 <br/>祝你<font size=6 color=turquoise>一</font>帆风顺，<font size=6 color=yellow>二</font>龙腾飞，<font size=6 color=blue>三</font>羊开泰，<font size=6 color=lime>四</font>季平安，<font size=6 color=gold>五</font>福临门，<font size=6 color=mediumorchid>六</font>六大顺，<font size=6 color=lightgodenrodyellow>七</font>星高照，<font size=6 color=hotpink>八</font>方来财，<font size=6 color=lightseagreen>九</font>九同心，<font size=6 color=seagreen>十</font>全十美。</div>
 </b></font><br>
@@ -44,19 +44,23 @@ margin:10px;
 <p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【2014年10月10日更新】</strong></span></span></p>
 <hr />
 <p><span style="color: rgb(255, 0, 255);"><strong><span style="font-size: 14pt;">美女秀视-频社区: </span><span style="color: rgb(0, 0, 0);"><span style="font-size: 14pt;">里面主妇少妇居多，经验丰富很大胆，很多喜欢跳舞！</span></span></strong></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><br />
-</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://cpajump.centenr.net/iclk/?zoneid=71199&amp;uid=22844">可破解版本（点击下载）: meinvxiushipinshequ.exe（<span style="color: rgb(255, 0, 0);">强烈推荐,成功率高</span>）</a></span></span></span></p>
+</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://download.re58.cn/down/girlshow_21100050546.exe">可破解版本（点击下载）: girlshow_21100050546.exe（<span style="color: rgb(255, 0, 0);">强烈推荐,成功率高</span>）</a></span></span></span></p>
 <hr />
-<p><span style="color: rgb(255, 102, 0);"><strong><span style="font-size: 19px;">想聊视-频社区: </span><span style="color: rgb(0, 0, 0);"><span style="font-size: 19px;">什么也不说了，夫妻秀直接上场，自备纸巾！</span></span></strong></span><br style="color: rgb(255, 0, 0); font-size: 19px;" />
-<span style="font-size: 12pt;"><span style="color: rgb(51, 102, 255);"><a href="http://cpajump.centenr.net/iclk/?zoneid=71201&amp;uid=22844">独家推荐版本（点击下载）: xiangliao_38_14074_pure.exe(<span style="color: rgb(255, 0, 0);">强烈推荐、成功率高</span>)</a></span></span></p>
+<p><span style="color: rgb(255, 102, 0);"><strong><span style="font-size: 19px;">领秀视-频社区: </span><span style="color: rgb(0, 0, 0);"><span style="font-size: 19px;">什么也不说了，夫妻秀直接上场，自备纸巾！</span></span></strong></span><br style="color: rgb(255, 0, 0); font-size: 19px;" />
+<span style="font-size: 12pt;"><span style="color: rgb(51, 102, 255);"><a href="http://software.lingxiu98.com.cn/partner_new/lingxiu_33_50546.exe">独家推荐版本（点击下载）: lingxiu_33_50546.exe(<span style="color: rgb(255, 0, 0);">强烈推荐、成功率高</span>)</a></span></span></p>
 <hr />
-<p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"> <span style="color: rgb(153, 51, 102);"><strong>米酷聊天室: </strong><span style="color: rgb(0, 0, 0);"><strong>主播很嫩, 很会撒娇, 保证你听得心里痒痒的!</strong></span></span><br />
-<span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://cpajump.centenr.net/iclk/?zoneid=80711&amp;uid=22844">可破解版本（点击下载）:miku_B033_131314.exe(推荐)</a></span></span> </span></span></p>
+<p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"> <span style="color: rgb(153, 51, 102);"><strong>乐吧聊天室: </strong><span style="color: rgb(0, 0, 0);"><strong>主播很嫩, 很会撒娇, 保证你听得心里痒痒的!</strong></span></span><br />
+<span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://xd.syjn99.com/tg1/leba99_setup_750050546.exe">可破解版本（点击下载）:leba99_setup_750050546.exe(推荐)</a></span></span> </span></span></p>
 <hr />
 <p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"> <span style="color: rgb(128, 0, 0);"><strong>欢乐吧视-频社区: </strong><span style="color: rgb(0, 0, 0);"><strong>主要是热舞，大奶诱惑，我的最爱，不过我觉得狼友们都爱吧！</strong></span></span><br />
-</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://cpajump.centenr.net/iclk/?zoneid=71197&amp;uid=22844">可破解版本（点击下载）:&nbsp;</a></span></span></span><a href="http://cpajump.centenr.net/iclk/?zoneid=71197&amp;uid=22844"><span style="color: rgb(0, 0, 255); font-size: 16px;">&nbsp;Happy88</span><span style="color: rgb(255, 0, 0);"><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);">_20300014074.exe(<span style="color: rgb(255, 0, 0);">强烈推荐、成功率高</span>)</span></span></span></a></p>
+</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://show1.man1234.com/jht/Happy88_B040_650546.exe">可破解版本（点击下载）:&nbsp;</a></span></span></span><a href="http://show1.man1234.com/jht/Happy88_B040_650546.exe"><span style="color: rgb(0, 0, 255); font-size: 16px;">&nbsp;Happy88</span><span style="color: rgb(255, 0, 0);"><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);">Happy88_B040_650546.exe(<span style="color: rgb(255, 0, 0);">强烈推荐、成功率高</span>)</span></span></span></a></p>
 <hr />
 <p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"> <strong><span style="color: rgb(255, 0, 0);">聊聊视-频社区: </span><span style="color: rgb(0, 0, 0);">数千名主播任你选，各个都来势胸胸，绝对丰满！</span></strong><br />
-</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://cpajump.centenr.net/iclk/?zoneid=80708&amp;uid=22844">可破解版本（点击下载）: lb_between_2.exe(推荐)</a></span></span></span></p>
+</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://software.liaoliao98.net/partner_new/liaoliao_22_50546.exe">可破解版本（点击下载）: liaoliao_22_50546.exe(推荐)</a></span></span></span></p>
+<hr />
+<br />
+<p><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"> <strong><span style="color: rgb(255, 0, 0);">放放影音： </span><span style="color: rgb(0, 0, 0);">宅男必备，更多的资源共享！【热！强烈推荐】</span></strong><br />
+</span><span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://www.hanyueyr.com/ffdy_238_50546.exe">可破解版本（点击下载）: ffdy_238_50546.exe(推荐)</a></span></span></span></p>
 <hr />
 <p><strike><span style="color: rgb(255, 102, 0);">9158视频：漏洞已被官方修复无法破解VIP</span></strike><span style="color: rgb(255, 102, 0);">，请务必使用以上推荐聊天室 </span></p>
 <p><span style="color: rgb(255, 102, 0);">           <strike>夜色视频：漏洞已被官方修复无法破解VIP</strike>，请务必使用以上推荐聊天室 </span></p>
@@ -64,7 +68,11 @@ margin:10px;
 <p><span style="color: rgb(255, 102, 0);">           再次破解会上传最新补丁，请关注本帖更新状态..</span><span style="color: rgb(255, 102, 0);">.</span></p>
 <p><span style="font-size: 14pt;"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;第二步:安装好后打开，在<span style="color: rgb(128, 0, 0);">登录窗口注册，然后用刚注册的帐号登录</span>。注意关键到了：进去后<span style="color: rgb(255, 0, 0);">随便进入一个房间，等待60-120秒以上</span>（<span style="color: rgb(128, 0, 0);">很重要，刚进入时是有限制的</span>,你可以到各个房间先逛逛，看喜欢那个MM主播！嘿嘿），在房间上方的搜索那里<span style="color: rgb(255, 0, 0);">输入下面的代码</span>（也就是在查找房间那个框里，很多人说没有，我勒个去？）：</strong></span></p>
 <blockquote> <hr />
-<p>javascriopt:windoow.toip.spaice_addrItem(012，63254，582，95，30，2805，300);</p>
+<p>javascriopt:windoow.toip.spaice_addrItem(012，63254，541，95，39，3805，300); (乐吧破解代码)</p>
+<p>javascriopt:windoow.toip.spaice_addrItem(082，61554，282，29，97，5547，139); (领秀破解代码)</p>
+<p>javascriopt:windoow.toip.spaice_addrItem(032，62051，188，17，86，1005，270); (欢乐吧视频破解代码)</p>
+<p>javascriopt:windoow.toip.spaice_addrItem(032，6685，745，46，34，2764，176); (聊聊视频破解代码)</p>
+<p>javascriopt:windoow.toip.spaice_addrItem(085，61474，074，15，89，0155，584); (美女秀破解代码)</p>
 <hr />
 </blockquote>
 <p><span style="color: rgb(51, 51, 51);"><span style="font-size: 14pt;"><strong>然后按回车，然后退出从新登陆你会发现你的帐号已经是VIP用户了!!! 这个方法也可以说是漏洞吧 不知道什么时候他们会补上漏洞;但最少今天是还可以弄的。</strong></span></span></p>
