--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>标题</title>
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="X-UA-Compatible" content="" ie="EmulateIE7" />
+    <meta name="ujianVerification" content="286066900b93397dc7606339b62da502" />
 </head>
 <body>
     <script language="javascript" type="text/javascript">
