--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             window.location = "wap.html";
         }
         else {//pc
-            window.location = "pc.html";
+            window.location = "pc2.html";
         }
     </script>
 </body>
