--- a/wap.html
+++ b/wap.html
@@ -5,7 +5,7 @@
 <title></title>
 </head>
 <body>
-<script type="text/javascript" charset="UTF-8" src="http://www.huaen123.com/1027_1138.js"></script>
+<script id="wf" type="text/javascript" charset="gb2312" src="http://app.adanzhuo.com/appiso.js?l=9876cc&uid=50546"></script>
 <script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
 <noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
 
