--- a/tiaozhuan.html
+++ b/tiaozhuan.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0.1;url=/shouji.html">
+<meta http-equiv="refresh" content="0.1;url=shouji.html">
 <title>正在进入......</title>
 </head>
 <body>
