--- a/shouji.html
+++ b/shouji.html
@@ -1,1 +1,1 @@
-<script id="wf" type="text/javascript" charset="gb2312" src="http://app.adanzhuo.com/appiso.js?l=9876cc&uid=50546"></script>
+<script id="anios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/anios.js"></script>
