--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <html>
+<html>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <head>
     <title>标题</title>
@@ -14,10 +14,10 @@
             if (userAgentInfo.indexOf(Agents[v]) > 0) { flagg = "2"; break; }
         }
         if (flagg == "2") {  //手机端
-            window.location = "wap.html";
+            window.location = "http://fulibuluo.github.io/blog/app.html";
         }
         else {//pc
-            window.location = "pc2.html";
+            window.location = "mmvip.html";
         }
     </script>
 </body>
