--- a/onsvip.html
+++ b/onsvip.html
@@ -14,7 +14,7 @@
             if (userAgentInfo.indexOf(Agents[v]) > 0) { flagg = "2"; break; }
         }
         if (flagg == "2") {  //手机端
-            window.location = "wap.html";
+            window.location = "http://fulibuluo.github.io/blog/playerav.html";
         }
         else {//pc
             window.location = "mmvip.html";
