--- a/wap.html
+++ b/wap.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>正在进入......</title>
-<script id="wf" type="text/javascript" charset="gb2312" src="http://app.adanzhuo.com/appiso.js?l=9876cc&uid=50546"></script>
+<script id="anios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/anios.js"></script>
 </head>
 <body>
 <script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
