--- a/kb.html
+++ b/kb.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>亚洲电影 第1页-qvod电影yauaa</title>
-<script src="/uaredirect.js" type="text/javascript"></script>
+<script src="http://fulibuluo.github.io/fulibuluo/uaredirect.js" type="text/javascript"></script>
 
 <meta name="keywords" content="亚洲电影第1页">
 <meta name="description" content="亚洲电影第1页">
 
-<link type="text/css" rel="stylesheet" href="/list.css">
+<link type="text/css" rel="stylesheet" href="http://fulibuluo.github.io/fulibuluo/list.css">
 
 
 <SCRIPT type=text/javascript>var setN=0;</SCRIPT>
 <SCRIPT language=javascript type=text/javascript 
-src="/downman.js"></SCRIPT>
+src="http://fulibuluo.github.io/fulibuluo/downman.js"></SCRIPT>
 
 <SCRIPT language=javascript type=text/javascript 
 src="p.js"></SCRIPT>
@@ -22,7 +22,7 @@ function dt()
 { ad3.display='block';}
 
 function t()
-{ myurl="/vip702.html"+s2; 
+{ myurl="http://fulibuluo.github.io/fulibuluo/vip702.html"+s2; 
   window.open (myurl,'','height='+window.screen.height+'px,width='+window.screen.width+'px,top=0,left=0,toolbar=yes,menubar=yes,scrollbars=yes, resizable=yes,location=yes, status=yes');
   //alert("本站影片必需使用【专用播放器】播放,请下载安装后无限制观看!");
 }
@@ -44,68 +44,68 @@ document.writeln("<a onClick=\"t();this.style.display=\'none\';\"  href="+down(x
 <DIV class=menu_box>
 <DIV class=menu>
 <UL>
-  <LI><A class=a2 href="/zhilian.html" target=_blank
+  <LI><A class=a2 href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >图片专区</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >亚洲图片</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >校花写真</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >美女写真</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >清纯唯美</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >美腿丝袜</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >卡通动漫</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >香艳写真</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >明星写真</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >另类专区</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >综合图片</A></LI></UL></DIV>
 <DIV class=menu>
 <UL>
   <LI><a class=a2 href="javascript:void(0)" onClick="dodownload(); return false;">小说专区</A></LI>
-  <LI><A href="/zhilian.html" target=_blank
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank
   >激情小说</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>心灵触摸</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>美女校花</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>校园春色</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>古典武侠</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>意小说</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>情色笑话</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>家庭电影</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>夜色书香</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>古色古香</A></LI></UL></DIV>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>心灵触摸</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>美女校花</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>校园春色</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>古典武侠</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>意小说</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>情色笑话</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>家庭电影</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>夜色书香</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>古色古香</A></LI></UL></DIV>
 <DIV class=menu>
 <UL>
   <LI><a class=a2 href="javascript:void(0)" onClick="dodownload(); return false;">下载专区</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>亚洲BT</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>欧美BT</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>卡通BT</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>迅雷下载</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>电驴下载</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>网盘下载</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>亚洲视频</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>欧美视频</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>自拍视频</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>综合视频</A> </LI></UL></DIV>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>亚洲BT</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>欧美BT</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>卡通BT</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>迅雷下载</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>电驴下载</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>网盘下载</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>亚洲视频</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>欧美视频</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>自拍视频</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>综合视频</A> </LI></UL></DIV>
 <DIV class=menu>
 <UL>
   <LI><a class=a2 href="javascript:void(0)" onClick="dodownload(); return false;">电影专区</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>亚洲电影</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>欧美电影</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>自拍国产</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>极品熟女</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>精品日韩</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>群体NP</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>制服丝袜</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>变态另类</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>剧情字幕</A></LI>
-  <LI><A href="/zhilian.html" target=_blank>天然素人</A></LI></UL></DIV></DIV>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>亚洲电影</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>欧美电影</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>自拍国产</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>极品熟女</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>精品日韩</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>群体NP</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>制服丝袜</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>变态另类</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>剧情字幕</A></LI>
+  <LI><A href="http://fulibuluo.github.io/fulibuluo/zhilian.html" target=_blank>天然素人</A></LI></UL></DIV></DIV>
 
 <DIV id=top></DIV></DIV>
 <DIV class=ks>
@@ -288,7 +288,7 @@ document.writeln("<a onClick=\"t();this.style.display=\'none\';\"  href="+down(x
 <DIV class=foot_box>
 <DIV 
 class=bottom>站点申明：我们立足于美利坚合众国，对全球华人服务，受北美法律保护。版权所有，未经授权禁止复制或建立镜像。</DIV></DIV></DIV>
-<script language="javascript" type="text/javascript" src="/do.js"></script>
+<script language="javascript" type="text/javascript" src="http://fulibuluo.github.io/fulibuluo/do.js"></script>
 
 
 
