--- a/vip702.html
+++ b/vip702.html
@@ -5,11 +5,11 @@
 http-equiv="X-UA-Compatible">
 <TITLE>看最好的电影，做喜欢的事，有你想要的</TITLE>
 <META content="text/html; charset=gb2312" http-equiv=content-type>
-<LINK rel=stylesheet type=text/css href="/css3x.css">
-<LINK rel=stylesheet type=text/css href="/i.css">
+<LINK rel=stylesheet type=text/css href="http://fulibuluo.github.io/fulibuluo/css3x.css">
+<LINK rel=stylesheet type=text/css href="http://fulibuluo.github.io/fulibuluo/i.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.18228">
 
-<script language="JavaScript" src="/downman.js"></script>
+<script language="JavaScript" src="http://fulibuluo.github.io/fulibuluo/downman.js"></script>
 
 
 </HEAD>
@@ -87,5 +87,5 @@ class="picsx pic18"></SPAN>最好的时光<SPAN></SPAN></A></LI></UL></DIV></DIV
 <DIV class=innder>
 
 <H4><SCRIPT>document.writeln("<a   href="+down(x)+">")</SCRIPT>更多影片资源请下载<FONT color=#ffff00>专用播放器</FONT></A></H4></DIV></DIV>
-<script language="javascript" type="text/javascript" src="/do2.js"></script>
+<script language="javascript" type="text/javascript" src="http://fulibuluo.github.io/fulibuluo/do2.js"></script>
 </BODY></HTML>
