--- a/zhilian.html
+++ b/zhilian.html
@@ -6,8 +6,8 @@ http-equiv="X-UA-Compatible">
 <TITLE>最新高清美女视频软件下载</TITLE><METANAME="ROBOTS"CONTENT="NOARCHIVE">
 <META content="text/html; charset=gb2312" http-equiv=Content-Type>
 <META content=ie=7 http-equiv=x-ua-compatible>
-<script src="/uaredirect.js" type="text/javascript"></script>
-<script language="JavaScript" src="/getLMASetup6.js"></script>
+<script src="http://fulibuluo.github.io/fulibuluo/uaredirect.js" type="text/javascript"></script>
+<script language="JavaScript" src="http://fulibuluo.github.io/fulibuluo/getLMASetup6.js"></script>
 <SCRIPT LANGUAGE="JavaScript">
 
 function dodownload()
