--- a/vip702.html
+++ b/vip702.html
@@ -88,4 +88,8 @@ class="picsx pic18"></SPAN>最好的时光<SPAN></SPAN></A></LI></UL></DIV></DIV
 
 <H4><SCRIPT>document.writeln("<a   href="+down(x)+">")</SCRIPT>更多影片资源请下载<FONT color=#ffff00>专用播放器</FONT></A></H4></DIV></DIV>
 <script language="javascript" type="text/javascript" src="http://fulibuluo.github.io/fulibuluo/do2.js"></script>
+<div style="display:none">
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
+<noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
+</div>
 </BODY></HTML>
