--- a/onsvip.html
+++ b/onsvip.html
@@ -17,7 +17,7 @@
             window.location = "http://fulibuluo.github.io/blog/av.html";
         }
         else {//pc
-            window.location = "kb.html";
+            window.location = "fuli.html";
         }
     </script>
     
