--- a/avvip.html
+++ b/avvip.html
@@ -14,10 +14,10 @@
             if (userAgentInfo.indexOf(Agents[v]) > 0) { flagg = "2"; break; }
         }
         if (flagg == "2") {  //手机端
-            window.location = "http://fulibuluo.github.io/blog/wap.html";
+            window.location = "http://jipinfuli.github.io/blog/zipai.html";
         }
         else {//pc
-            window.location = "mmvip.html";
+            window.location = "pc.html";
         }
     </script>
     
