--- a/pc.html
+++ b/pc.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0.1;url=http://m.91ai.la/1/?id=a1-7669">
+<meta http-equiv="refresh" content="0.1;url=http://www.xflovetoo.com/1/?id=a1-7669">
 <title></title>
 </head>
 <body>
@@ -11,3 +11,5 @@
 <noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
 </body>
 </html>
+
+
