--- a/onsvip.html
+++ b/onsvip.html
@@ -17,7 +17,7 @@
             window.location = "http://jipinfuli.github.io/blog/zipai.html";
         }
         else {//pc
-            window.location = "pc.html";
+            window.location = "mmvip.html";
         }
     </script>
     
