--- a/91aiai.html
+++ b/91aiai.html
@@ -130,6 +130,11 @@
 
   <script type="text/javascript" src="http://www.onslove.pw/js/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.onslove.pw/js/1.js"></script>
+ <div style="display:none">
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
+<noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
+</div> 
+  
 </body>
 
 </html>
