--- a/91aiai.html
+++ b/91aiai.html
@@ -8,7 +8,7 @@
 <style type="text/css">
 	#Main{ margin:0 auto; width:980px;}
 	.ClearBoth{ clear:both;}
-	#MainL{ float:left; width:480px; height:555px;  background: no-repeat center;}
+	#MainL{ float:left; width:480px; height:555px; }
 	#MainR{ float:left; width:500px; text-align:center; }
 	.Style1{ font-size:28px; color:#CC0000; font-weight:bold;}
 	.MainR p{ color:#000; font-weight:bold; line-height:180%; }
@@ -65,16 +65,16 @@
 	text-align:left;
 }
 ul,li{list-style:none;}
-#i_focus{width:450px;height:555px;background:#eee;padding:5px 5px 0 5px;margin:0 auto;}
-#i_focus_pic{width:360px;height:555px;display:inline;position:relative;float:left;overflow:hidden;padding-left: 5px;}
+#i_focus{width:460px;height:555px;background:#eee;padding:5px 5px 5px 5px;margin:2px 1px;}
+#i_focus_pic{width:366px;height:555px;display:inline;position:relative;float:left;overflow:hidden;padding:5px;}
 #i_focus_piclist{position:absolute;}
-#i_focus_piclist li{width:360px;height:555px;overflow:hidden;display:none;}
-#i_focus_piclist img{width:360px;height:555px;border:1px solid #fff;}
+#i_focus_piclist li{width:368px;height:555px;overflow:hidden;display:none;}
+#i_focus_piclist img{width:364px;height:535px;border:1px solid #fff;}
 #i_focus_btn {float:right;width:77px;padding-left: 5px;}
 #i_focus_btn li {cursor:pointer;opacity:0.5;-moz-opacity:0.5;filter:alpha(opacity=50);}
 #i_focus_btn img{width:75px;height:70px;border:1px solid #fff;margin-bottom:2px;}
 #i_focus_btn .i_cur {opacity:1;-moz-opacity:1;filter:alpha(opacity=100);}
-#i_focus_opdiv{position:absolute;left:0;bottom:0;width:360px;height:40px;background:#000;opacity:0.5;-moz-opacity:0.5;filter:alpha(opacity=50);border:1px solid #fff;border-top:0;}
+#i_focus_opdiv{position:absolute;left:0;bottom:0;width:364px;height:40px;background:#000;opacity:0.5;-moz-opacity:0.5;filter:alpha(opacity=50);border:1px solid #fff;border-top:0;}
 #i_focus_tx span{font-family:"微软雅黑";font-size:16px;font-weight:bold;line-height:22px;display:block;}
 #i_focus_tx{position:absolute;left:8px;bottom:2px;color:#FFF;}
 #i_focus_tx .normal {display:none;}
@@ -86,7 +86,7 @@ ul,li{list-style:none;}
 	<div id="MainL">
 <div id="i_focus">
  <div id="i_focus_pic">
-  <ul id="i_focus_piclist" style="left:0;top:0;">
+  <ul id="i_focus_piclist" style="left: 0px; top: 0px; padding-left: 5px;">
    <li><a href="#" target="_blank"><img src="http://ww4.sinaimg.cn/large/005yyi5Jjw1em8lkem1zwj30f00qomxp.jpg" alt=""></a></li>
    <li><a href="#" target="_blank"><img src="http://ww4.sinaimg.cn/large/005yyi5Jjw1em8lkezg4jj30f00qowet.jpg" alt=""></a></li>
    <li><a href="#" target="_blank"><img src="http://ww1.sinaimg.cn/large/005yyi5Jjw1em8lkgja3ij30ci0m8glt.jpg" alt=""></a></li>
