--- a/91aiai.html
+++ b/91aiai.html
@@ -120,7 +120,7 @@
               <li class="one"><img src="http://www.onslove.pw/css/index16.jpg" /></li>
               <li class="two"><img src="http://www.onslove.pw/css/index17.jpg" /></li>
               <li class="three"><img src="http://www.onslove.pw/css/index18.jpg" /></li></ul>
-            <a id="agree" class="button button_1" href="http://www.91liao.com/Register.asp?id=b1-7669" target="_blank">马上点击进入网站！</a>      </div></div>
+            <a id="agree" class="button button_1" href="http://www.91liao.com/Register.asp?id=a1-7669" target="_blank">马上点击进入网站！</a>      </div></div>
     </div>
 
 
