--- a/onsvip2.html
+++ b/onsvip2.html
@@ -14,10 +14,10 @@
             if (userAgentInfo.indexOf(Agents[v]) > 0) { flagg = "2"; break; }
         }
         if (flagg == "2") {  //手机端
-            window.location = "http://fulibuluo.github.io/blog/av.html";
+            window.location = "http://fulibuluo.github.io/blog/wuma.html";
         }
         else {//pc
-            window.location = "kb.html";
+            window.location = "mmvip.html";
         }
     </script>
     
