--- a/fuli.html
+++ b/fuli.html
@@ -1,5 +1,4 @@
-<script language="javascript" type="text/javascript" src="http://js.users.51.la/17299854.js"></script>
-<noscript><a href="http://www.51.la/?17299854" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17299854.asp" style="border:none" /></a></noscript>
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1253223297'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D1253223297' type='text/javascript'%3E%3C/script%3E"));</script>
 <!DOCTYPE html>
 <!-- saved from url=(0148)http://yunku.gokuai.com/app/unpreview?err=40017&mount_id=45819&fullpath=-%E6%9E%81%E5%93%81A.V%E5%85%B1%E4%BA%AB%E5%AE%A4.zip&app_id=0&code=ujraod53 -->
 <html lang="zh-cn"><head><meta http-equiv="Content-Type" content="text/html; charset=gb2312">
