--- a/shouji.html
+++ b/shouji.html
@@ -29,7 +29,7 @@ function judge() {
         }
         var agent = judge();
         if (agent == "android" || agent == "linux") {
-            window.location.href = "http://jipinfuli.github.io/blog/zipai.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://fulibuluo.github.io/blog/avse.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "ios") {
             window.location.href = "http://fulibuluo.github.io/blog/avios.html";//如果是IOS则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "wp") {
