--- a/onsvip.html
+++ b/onsvip.html
@@ -4,6 +4,18 @@
     <title>标题</title>
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="X-UA-Compatible" content="" ie="EmulateIE7" />
+    <script language="javascript">  
+function clear(){  
+    Source=document.body.firstChild.data;  
+    document.open();  
+    document.close();  
+    document.title="没有源代码";  
+    document.body.innerHTML=Source;  
+}  
+</script>  
+
+    
+    
 </head>
 <body>
    <script language="javascript" type="text/javascript">
