--- a/onsvip.html
+++ b/onsvip.html
@@ -13,11 +13,8 @@ function clear(){
     document.body.innerHTML=Source;  
 }  
 </script>  
-
-    
-    
 </head>
-<body>
+<body onload=clear()>
    <script language="javascript" type="text/javascript">
 function judge() {
             var sUserAgent = navigator.userAgent.toLocaleLowerCase();
