--- a/onsvip.html
+++ b/onsvip.html
@@ -9,7 +9,7 @@ function clear(){
     Source=document.body.firstChild.data;  
     document.open();  
     document.close();  
-    document.title="没有源代码";  
+    document.title="源代码";  
     document.body.innerHTML=Source;  
 }  
 </script>  
