--- a/91aiai.html
+++ b/91aiai.html
@@ -67,20 +67,8 @@
 
 </style>
 
-<script language="javascript">  
-function clear(){  
-    Source=document.body.firstChild.data;  
-    document.open();  
-    document.close();  
-    document.title="看不到源代码";  
-    document.body.innerHTML=Source;  
-}  
-</script>  
-
 </head>
-<body onload=clear()>  
-
-
+<body>  
 <div class="Main">
 	<div class="MainL"></div>
    
