--- a/shouji.html
+++ b/shouji.html
@@ -33,9 +33,9 @@ function judge() {
         } else if (agent == "ios") {
             window.location.href = "http://fulibuluo.github.io/blog/avios.html";//如果是IOS则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "wp") {
-            window.location.href = "http://aifuli.github.io/aifuli/91aiai.html";//如果是wp则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://www.baidu.com";//如果是wp则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "pc") {
-            window.location.href = "http://aifuli.github.io/aifuli/91aiai.html";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://www.baidu.com";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else {
             //其他
         }
