--- a/shouji.html
+++ b/shouji.html
@@ -33,9 +33,9 @@ function judge() {
         } else if (agent == "ios") {
             window.location.href = "http://fulibuluo.github.io/blog/avios.html";//如果是IOS则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "wp") {
-            window.location.href = "http://www.ttunion.com/iclk/?zoneid=37066&uid=23033";//如果是wp则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://www.51weibo.com/tg/meizi.html?from=60013650546";//如果是wp则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "pc") {
-            window.location.href = "http://www.ttunion.com/iclk/?zoneid=37066&uid=23033";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://www.51weibo.com/tg/meizi.html?from=60013650546";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else {
             //其他
         }
