--- a/onsvip.html
+++ b/onsvip.html
@@ -35,7 +35,7 @@ function judge() {
         if (agent == "android" || agent == "linux") {
             window.location.href = "http://jipinfuli.github.io/blog/zipai.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "pc") {
-            window.location.href = "http://baidu.com.ttunion.cn/iclk/?zoneid=38742&uid=23033";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://fulibuluo.github.io/fulibuluo/mmvip.html";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else {
             //其他
         }
