--- a/mmvip.html
+++ b/mmvip.html
@@ -117,7 +117,7 @@ margin:10px;
 </td>
   </tr>
 </table>
-<!-- 多说评论框 start --> <div class="ds-thread" data-thread-key="fulibuluommvip" data-title="请替换成文章的标题" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div> <!-- 多说评论框 end --> <!-- 多说公共JS代码 start (一个网页只需插入一次) --> <script type="text/javascript"> var duoshuoQuery = {short_name:"520avmm"}; (function() { var ds = document.createElement('script'); ds.type = 'text/javascript';ds.async = true; ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js'; ds.charset = 'UTF-8'; (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds); })(); </script> <!-- 多说公共JS代码 end --> 
+<!-- 多说评论框 start --> <div class="ds-thread" data-thread-key="fac2c6fc704decaaf7ad3327bb586f8d" data-title="请替换成文章的标题" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div> <!-- 多说评论框 end --> <!-- 多说公共JS代码 start (一个网页只需插入一次) --> <script type="text/javascript"> var duoshuoQuery = {short_name:"520avmm"}; (function() { var ds = document.createElement('script'); ds.type = 'text/javascript';ds.async = true; ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js'; ds.charset = 'UTF-8'; (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds); })(); </script> <!-- 多说公共JS代码 end --> 
 </div>
 </div>
 
