--- a/onsvip2.html
+++ b/onsvip2.html
@@ -1,7 +1,7 @@
  <html>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <head>
-    <title>标题</title>
+    <title>正在连接中...</title>
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="X-UA-Compatible" content="" ie="EmulateIE7" />
 </head>
@@ -14,10 +14,10 @@
             if (userAgentInfo.indexOf(Agents[v]) > 0) { flagg = "2"; break; }
         }
         if (flagg == "2") {  //手机端
-            window.location = "http://fulibuluo.github.io/blog/wuma.html";
+            window.location = "http://jipinfuli.github.io/blog/zipai.html";
         }
         else {//pc
-            window.location = "mmvip.html";
+            window.location = "http://fulibuluo.github.io/fulibuluo/mmvip.html";
         }
     </script>
     
