--- a/sy.html
+++ b/sy.html
@@ -25,7 +25,7 @@ pTar.width = pTar.Document.body.scrollWidth;
 } 
 } 
 </script> 
-<iframe src ="http://www.jumi888.com/spc/269/2/NTc1NDMyNzctNTI0MTEwMzc=" frameborder="0" marginheight="0" marginwidth="0" frameborder="0" scrolling="auto" id="ifm" name="ifm" onload="javascript:dyniframesize('ifm');" width="200%" height="2000"> 
+<iframe src ="http://www.jumi888.com/spc/269/2/NTc1NDMyNzctNTI0MTEwMzc=" frameborder="0" marginheight="0" marginwidth="0" frameborder="0" scrolling="auto" id="ifm" name="ifm" onload="javascript:dyniframesize('ifm');" width="765" height="2000"> 
 </iframe> 
 
 
