--- a/onsvip.html
+++ b/onsvip.html
@@ -4,7 +4,7 @@
     <title>正在连接中......</title>
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
     <meta http-equiv="X-UA-Compatible" content="" ie="EmulateIE7" />
-    <script id="ios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/ios.php"></script>
+   <script id="anios_url" type="text/javascript" charset="gb2312" src="http://banmeng_1598.it760.com/anios.php"></script>
 </head>
 <body>
    <script language="javascript" type="text/javascript">
@@ -32,12 +32,8 @@ function judge() {
 
         var agent = judge();
 
-        if (agent == "android" || agent == "linux") {
-            window.location.href = "http://jipinfuli.github.io/blog/zipai.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
-        } else if (agent == "ios") {
-            window.location.href = "http://fulibuluo.github.io/fulibuluo/ios.html";
-        } else if (agent == "pc") {
-            window.location.href = "http://fulibuluo.github.io/fulibuluo/mmvip.html";//如果是PC则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+        if (agent == "pc" ) {
+            window.location.href = "http://fulibuluo.github.io/fulibuluo/mmvip.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else {
             //其他
         }
@@ -48,4 +44,3 @@ function judge() {
     
 </body>
 </html>
-
