--- a/mmvip.html
+++ b/mmvip.html
@@ -54,7 +54,7 @@ margin:10px;
 
 <br /> &nbsp;&nbsp;&nbsp;&nbsp;2. 欢乐吧 vip版（荐！第一坊、恋夜通用版）：    <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://www.53r.com/link/237928/">点击下载</a></span></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
 
-<br /> &nbsp;&nbsp;&nbsp;&nbsp;6. 5126视频社区 vip版：  <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://bei3.8910ad.com//iclk/?zoneid=174379&uid=22844">点击下载</a></span><span style="font-size: 14pt;"><strong>（荐！第一坊、恋夜通用版）</strong></span></span><br /> 
+<br /> &nbsp;&nbsp;&nbsp;&nbsp;6. 5126视频社区 vip版：  <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://bei3.8910ad.com//iclk/?zoneid=174379&uid=22844">点击下载</a></span>></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
 
 <br /> &nbsp;&nbsp;&nbsp;&nbsp;5. 乐吧聊天室 vip版：  <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://xd.szrxs.com.cn:9092/tg1/leba99_setup_750050546.exe">点击下载</a></span></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>（荐！第一坊、恋夜通用版）</strong></span></span><br /> 
 
