--- a/mmvip.html
+++ b/mmvip.html
@@ -50,9 +50,9 @@ margin:10px;
 <br /> &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:rgb(0,102,0) ">下面发放分享给大家让我们都不花钱成为聊天室VIP，免费去调戏些美女主播，废话不多说，直接放出vip破解版聊天室：</span>
 <br />
 
-<br /> &nbsp;&nbsp;&nbsp;&nbsp;1. 9158KTV vip版（荐！第一坊、恋夜通用版）：          <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://down.54inren.com/ktv/9158chat_ktv191_850546.exe">点击下载</a></span></span> <span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
+<br /> &nbsp;&nbsp;&nbsp;&nbsp;1. 9158KTV vip版：          <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://down.54inren.com/ktv/9158chat_ktv191_850546.exe">点击下载</a></span></span> <span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
 
-<br /> &nbsp;&nbsp;&nbsp;&nbsp;2. 欢乐吧 vip版（荐！第一坊、恋夜通用版）：    <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://www.53r.com/link/237928/">点击下载</a></span></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
+<br /> &nbsp;&nbsp;&nbsp;&nbsp;2. 欢乐吧 vip版：    <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://www.53r.com/link/237928/">点击下载</a></span></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
 
 <br /> &nbsp;&nbsp;&nbsp;&nbsp;6. 5126视频社区 vip版：  <span style="font-size: 12pt;"><span style="color: rgb(0, 0, 255);"><a href="http://bei3.8910ad.com//iclk/?zoneid=174379&uid=22844">点击下载</a></span>></span><span style="color: rgb(255, 0, 0);"><span style="font-size: 14pt;"><strong>【荐，已打开第一坊、恋夜房间通道】</strong></span></span><br /> 
 
