--- a/mmvip.html
+++ b/mmvip.html
@@ -123,10 +123,23 @@ margin:10px;
 </td>
   </tr>
 </table>
-<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
-<!-- UY END -->
+
+<!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="index2" data-title="2016最新聊天室vip破解版" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"fulibuluo123"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
 
 
 </div>
