--- a/mmvip.html
+++ b/mmvip.html
@@ -124,6 +124,11 @@ margin:10px;
   </tr>
 </table>
 
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
+<!-- UY END -->
+
 <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="index2" data-title="2016最新聊天室vip破解版" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div>
 <!-- 多说评论框 end -->
