--- a/mmvip.html
+++ b/mmvip.html
@@ -127,7 +127,7 @@ margin:10px;
 <!-- UY BEGIN -->
 <script type="text/javascript">
 
-#uyan_top{display: none !important;}
+#global-nav{display: none !important;}
 
 </script>
 <div id="uyan_frame"></div>
