--- a/mmvip.html
+++ b/mmvip.html
@@ -124,15 +124,10 @@ margin:10px;
   </tr>
 </table>
 
-<!-- UY BEGIN -->
-<script type="text/javascript">
-
-#global-nav{display: none !important;}
-
-</script>
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
-<!-- UY END -->
+<!-- UYAN COUNT BEGIN -->
+<a href="http://fulibuluo.github.io/fulibuluo/mmvip.html" id="uyan_count_unit" du="如果网站定义了du参数此处请填上" su="如果网站定义了su参数此处请填上">0条评论</a>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script> <!-- 如果已经过加载此行JS，即可不用重复加载 -->
+<!-- UYAN COUNT END -->
 
 <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="index2" data-title="2016最新聊天室vip破解版" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div>
