--- a/mmvip.html
+++ b/mmvip.html
@@ -124,27 +124,10 @@ margin:10px;
   </tr>
 </table>
 
-<!-- UYAN COUNT BEGIN -->
-<a href="http://fulibuluo.github.io/fulibuluo/mmvip.html" id="uyan_count_unit" du="如果网站定义了du参数此处请填上" su="如果网站定义了su参数此处请填上">0条评论</a>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script> <!-- 如果已经过加载此行JS，即可不用重复加载 -->
-<!-- UYAN COUNT END -->
-
-<!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="index2" data-title="2016最新聊天室vip破解版" data-url="http://fulibuluo.github.io/fulibuluo/mmvip.html"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"fulibuluo123"};
-	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		 || document.getElementsByTagName('body')[0]).appendChild(ds);
-	})();
-	</script>
-<!-- 多说公共JS代码 end -->
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
+<!-- UY END -->
 
 
 </div>
