--- a/mmvip.html
+++ b/mmvip.html
@@ -125,6 +125,11 @@ margin:10px;
 </table>
 
 <!-- UY BEGIN -->
+<script type="text/javascript">
+#counter-box{display: none !important;}
+.global-nav{display: none !important;}
+
+</script>
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
 <!-- UY END -->
